@@ -49,12 +49,6 @@ function timestep(){
 	meter.tick()
 	// Update the grid with one MCS
 	C.monteCarloStep()
-	C.monteCarloStep()
-	C.monteCarloStep()
-	C.monteCarloStep()
-	C.monteCarloStep()
-
-
 	if( t % 10 == 0 ){
 		// Clear the canvas (white)
 		Cim.clear( "FFFFFF" )
